# CameraOS

./: .gitignore  .gitmodules  CMakeLists.txt
apps/ipcamera/: CMakeLists.txt  app.c  app.h  main.c
hal/: CMakeLists.txt
hal/include/cameraos/hal/: hal.h  hal_audio.h  hal_common.h  hal_isp.h  hal_osd.h  hal_system.h  hal_video.h
hal/src/: hal.c  hal_audio.c  hal_internal.h  hal_isp.c  hal_osd.c  hal_system.c  hal_video.c
hal/test/: main.c
platform/: PlatformUtils.c
services/media/: CMakeLists.txt
services/media/include/cameraos/services/media/: media_service.h
services/media/src/: media_service.c  osal_bsp_shim.c
